mvn package -P release -Dmaven.javadoc.skip=true